// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Admin should create context [Mutation] 1`] = `
Object {
  "createContext": Object {
    "context": Object {
      "activeQuestion": null,
      "activeSurvey": null,
      "devices": null,
      "name": "TestContext",
      "owners": Array [
        Object {
          "email": "jane@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Context Admin should return all contexts [Query] 1`] = `
Object {
  "contexts": Array [
    Object {
      "activeQuestion": Object {
        "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "devices": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "Forum Gummersbach",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
    Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
      },
      "devices": Array [
        Object {
          "name": "Mensa Kiosk",
        },
        Object {
          "name": "Mensa Tablet",
        },
      ],
      "name": "TH-Koeln: Gummersbach Mensa",
      "owners": Array [
        Object {
          "email": "jane@doe.com",
        },
      ],
      "states": null,
    },
  ],
}
`;

exports[`Context Admin should return context not owned by User [Query] 1`] = `
Object {
  "context": Object {
    "activeQuestion": Object {
      "description": null,
    },
    "activeSurvey": Object {
      "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
    },
    "devices": Array [
      Object {
        "name": "Mensa Kiosk",
      },
      Object {
        "name": "Mensa Tablet",
      },
    ],
    "name": "TH-Koeln: Gummersbach Mensa",
    "owners": Array [
      Object {
        "email": "jane@doe.com",
      },
    ],
    "states": null,
  },
}
`;

exports[`Context Admin should return context owned by User [Query] 1`] = `
Object {
  "context": Object {
    "activeQuestion": Object {
      "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
    },
    "activeSurvey": Object {
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    },
    "devices": Array [
      Object {
        "name": "Forum Fernseher",
      },
      Object {
        "name": "Forum Tablet",
      },
    ],
    "name": "Forum Gummersbach",
    "owners": Array [
      Object {
        "email": "john@doe.com",
      },
    ],
    "states": null,
  },
}
`;

exports[`Context Admin should update context not owned by User [Mutation] 1`] = `
Object {
  "updateContext": Object {
    "context": Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "devices": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "RenamedTestContext",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Context Admin should update context owned by User [Mutation] 1`] = `
Object {
  "updateContext": Object {
    "context": Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "devices": Array [
        Object {
          "name": "Mensa Kiosk",
        },
        Object {
          "name": "Mensa Tablet",
        },
      ],
      "name": "RenamedTestContext",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Context User should create context [Mutation] 1`] = `
Object {
  "createContext": Object {
    "context": Object {
      "activeQuestion": null,
      "activeSurvey": null,
      "devices": null,
      "name": "TestContext",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;

exports[`Context User should return all contexts [Query] 1`] = `
Object {
  "contexts": Array [
    Object {
      "activeQuestion": Object {
        "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "devices": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "Forum Gummersbach",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  ],
}
`;

exports[`Context User should return context not owned by User [Query] 1`] = `
Object {
  "context": Object {
    "activeQuestion": Object {
      "description": null,
    },
    "activeSurvey": Object {
      "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
    },
    "devices": Array [
      Object {
        "name": "Mensa Kiosk",
      },
      Object {
        "name": "Mensa Tablet",
      },
    ],
    "name": "TH-Koeln: Gummersbach Mensa",
    "owners": null,
    "states": null,
  },
}
`;

exports[`Context User should return context owned by User [Query] 1`] = `
Object {
  "context": Object {
    "activeQuestion": Object {
      "description": "Bitte zeigen Sie mit einem \\"Like\\", ob Ihnen dieses Objekt gefällt.",
    },
    "activeSurvey": Object {
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    },
    "devices": Array [
      Object {
        "name": "Forum Fernseher",
      },
      Object {
        "name": "Forum Tablet",
      },
    ],
    "name": "Forum Gummersbach",
    "owners": Array [
      Object {
        "email": "john@doe.com",
      },
    ],
    "states": null,
  },
}
`;

exports[`Context User should update context owned by User [Mutation] 1`] = `
Object {
  "updateContext": Object {
    "context": Object {
      "activeQuestion": Object {
        "description": null,
      },
      "activeSurvey": Object {
        "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      },
      "devices": Array [
        Object {
          "name": "Forum Fernseher",
        },
        Object {
          "name": "Forum Tablet",
        },
      ],
      "name": "RenamedTestContext",
      "owners": Array [
        Object {
          "email": "john@doe.com",
        },
      ],
      "states": null,
    },
  },
}
`;
